--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -38,6 +38,9 @@ a:active {
     padding: 0 24px;
     overflow: hidden;
 }
+.about .container {
+    overflow: visible;
+}
 @media screen and (min-width: 1248px) {
     .container {
         overflow: unset;
