--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -68,10 +68,11 @@ strong {
     font-size: 24px;
 }
 .heading--intro {
-    color: #03CABE;
+    color: #FED21C;
+    font-size: 24px;
     letter-spacing: 2px;
     text-align: center;
-    text-shadow: 1px 1px 0 #171C21, 2px 2px 0 #171C21, 3px 3px 0 #171C21, 4px 4px 0 #171C21, 5px 5px 0 #171C21, 6px 6px 0 #171C21;
+    text-shadow: 1px 1px 0 #03CABE, 2px 2px 0 #03CABE, 3px 3px 0 #03CABE, 4px 4px 0 #03CABE, 5px 5px 0 #03CABE, 6px 6px 0 #03CABE;
     text-transform: uppercase;
 }
 
@@ -188,6 +189,27 @@ strong {
 .nav--link {
     color: white;
     display: inline-block;
+    position: relative;
+    text-decoration: none;
+}
+.nav--link::before {
+/*    background-color: #03CABE;*/
+    background-image: url(../images/memphis-line.svg);
+    background-position: center;
+    background-repeat: repeat-x;
+    background-size: 40px;
+/*    border-radius: 4px;*/
+    content: "";
+    display: block;
+    height: 12px;
+    left: 0;
+    position: absolute;
+    top: calc(100% - 6px);
+    width: 100%;
+    z-index: -1;
+}
+.nav--link:hover::before {
+    opacity: 0;
 }
 .nav--link:nth-of-type(n+2) {
     margin-left: 32px;
