--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:wght@400;700&family=Inter:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -13,7 +13,7 @@ html {
     background-repeat: no-repeat;
     background-size: 600px;
     color: #FFF;
-    font: normal 16px/1.5 -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: normal 16px/1.5 'Inter', -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 /*body {
     background-image: url(../images/squiggle.svg);
@@ -203,13 +203,14 @@ strong {
     display: block;
     height: 12px;
     left: 0;
+    opacity: 0;
     position: absolute;
     top: calc(100% - 6px);
     width: 100%;
     z-index: -1;
 }
 .nav--link:hover::before {
-    opacity: 0;
+    opacity: 1;
 }
 .nav--link:nth-of-type(n+2) {
     margin-left: 32px;
