--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -209,7 +209,8 @@ strong {
     width: 100%;
     z-index: -1;
 }
-.nav--link:hover::before {
+.nav--link:hover::before,
+.nav--link:focus::before {
     opacity: 1;
 }
 .nav--link:nth-of-type(n+2) {
