--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -15,12 +15,6 @@ html {
     color: #FFF;
     font: normal 16px/1.5 'Inter', -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-/*body {
-    background-image: url(../images/squiggle.svg);
-    background-position: left 200px;
-    background-repeat: no-repeat;
-    background-size: 80%;
-}*/
 
 a {
     text-decoration: underline;
@@ -343,6 +337,22 @@ strong {
     .work--item:nth-of-type(n+2) {
         margin-top: 0;
     }
+}
+
+.mini {
+    color: #171C21;
+    font-weight: 700;
+    text-decoration: none;
+    transition: box-shadow 0.16s ease-in-out, color 0.24s ease-in-out, transform 0.08s ease-in-out;
+}
+.mini:hover {
+    color: #7502D1;
+}
+.desc {
+    color: #666;
+    display: block;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .tw {
