--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -267,6 +267,7 @@ strong {
     padding: 80px 0;
     position: relative;
     text-align: center;
+    text-decoration: none;
     transition: box-shadow 0.16s ease-in-out, transform 0.08s ease-in-out;
     z-index: 2;
 }
@@ -337,6 +338,24 @@ strong {
     .work--item:nth-of-type(n+2) {
         margin-top: 0;
     }
+}
+
+.badge {
+    background-color: #171C21;
+    border-radius: 20px;
+    color: #FFF;
+    display: inline-block;
+    font-family: 'IBM Plex Sans Condensed', sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 24px;
+    padding: 0 10px;
+}
+.work--item .badge {
+    position: absolute;
+    left: 50%;
+    top: 24px;
+    transform: translateX(-50%);
 }
 
 .mini {
