Add in betalist color

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -395,6 +395,9 @@ strong {
 .mpj {
     background-color: #F0FBF1;
 }
+.bl {
+    background-color: #05B2E0;
+}
 
 .more-context {
     font-size: 20px;
