--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -40,6 +40,23 @@ a:active {
     box-shadow: 0 12px 32px rgba(33, 37, 41, 0.24);
     max-width: 100%;
 }
+
+.tldr {
+    background-color: #171C21;
+    border-radius: 24px;
+    padding: 32px 40px;
+    list-style: none;
+}
+.tldr li:after {
+    content: ",";
+    left: .125em;
+    opacity: 0.64;
+    position: relative;
+}
+.tldr li:last-of-type:after {
+    content: "";
+}
+
 .has-many {
     background-color: #171C21;
     border-radius: 24px;
