--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -42,10 +42,19 @@ a:active {
 }
 
 .tldr {
-    background-color: #171C21;
+    background-color: #440179;
+/*    border: 1px solid #440179;*/
     border-radius: 24px;
-    padding: 32px 40px;
+    box-shadow: 0 12px 32px rgba(33, 37, 41, 0.24);
+    padding: 16px 40px 32px;
     list-style: none;
+}
+.tldr:before {
+    content: "TLDR";
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    opacity: 0.64;
 }
 .tldr li:after {
     content: ",";
@@ -80,6 +89,11 @@ a:active {
     }
     .has-many img:nth-of-type(n+2) {
         margin-top: 0;
+    }
+    .tldr {
+        margin-left: -40px;
+        margin-right: -40px;
+        width: calc(100% + 80px);
     }
 }
 @media screen and (min-width: 1248px) {
