--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -129,7 +129,7 @@ strong {
     color: #FED21C;
     font-size: 32px;
     letter-spacing: 2px;
-/*    text-align: center;*/
+    text-align: center;
     text-shadow: 1px 1px 0 #03CABE, 2px 2px 0 #03CABE, 3px 3px 0 #03CABE, 4px 4px 0 #03CABE, 5px 5px 0 #03CABE, 6px 6px 0 #03CABE;
     text-transform: uppercase;
 }
@@ -291,7 +291,7 @@ strong {
     opacity: 1;
 }
 .nav--link:nth-of-type(n+2) {
-    margin-left: 32px;
+    margin-left: 24px;
 }
 
 .hero {
@@ -305,6 +305,9 @@ strong {
 @media screen and (min-width: 800px) {
     .hero {
         padding-top: 160px;
+    }
+    .nav--link:nth-of-type(n+2) {
+        margin-left: 32px;
     }
 }
 
@@ -492,9 +495,9 @@ strong {
 }
 
 
-.about {
+.about, .reviews {
     background-color: #5B02A3;
-    padding: 80px 0 0;
+    padding: 80px 0;
     position: relative;
     z-index: 1;
 }
@@ -512,8 +515,8 @@ strong {
     z-index: -1;
 }
 @media screen and (min-width: 800px) {
-    .about {
-        padding: 160px 0 0;
+    .about, .reviews {
+        padding: 160px 0;
     }
     .about::before {
         left: 80px;
@@ -654,6 +657,16 @@ strong {
     }
 }
 
+.reviews {
+/*    background-color: #FB57B9;*/
+background-color: #7502D1;
+}
+.reviews-list {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+    text-align: center;
+}
 
 
 .footer {
