Update reviews UI

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -665,8 +665,33 @@ background-color: #7502D1;
     margin-left: auto;
     margin-right: auto;
     max-width: 800px;
-    text-align: center;
 }
+.review--item {
+    background-color: #FFF;
+    border-radius: 8px;
+    box-shadow: 0 12px 32px rgba(33, 37, 41, 0.24);
+    color: #171C21;
+    padding: 32px 40px;
+    position: relative;
+}
+.review--item:after {
+    background-color: currentColor;
+    border-radius: 12px;
+    content: "";
+    display: block;
+    height: 100%;
+    left: 16px;
+    position: absolute;
+    opacity: 0.4;
+    top: 16px;
+    width: 100%;
+    z-index: -1;
+}
+/*@media screen and (min-width: 800px) {
+    .reviews-list {
+        text-align: center;
+    }
+}*/
 
 
 .footer {
