Update Heal.me case study)

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -125,6 +125,26 @@ strong {
 .body {
     font-size: 24px;
 }
+.body p + p,
+.body p + ul,
+.body ul + p {
+    margin-top: 24px;
+}
+.body ul {
+    padding-left: 40px;
+}
+.no-decoration li:after {
+    display: none;
+}
+.no-decoration li:nth-of-type(n+2) {
+    margin-top: 8px;
+}
+.designy {
+    background-color: rgba(255, 255, 255, 0.24);
+    border-radius: 4px;
+    height: 4px;
+    margin: 40px 0;
+}
 .heading--intro {
     color: #FED21C;
     font-size: 32px;
@@ -149,6 +169,9 @@ strong {
     }
     .body {
         font-size: 32px;
+    }
+    .body--sm {
+        font-size: 24px;
     }
     .grid {
         display: grid;
