--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -125,10 +125,12 @@ strong {
 .body {
     font-size: 24px;
 }
-.body p + p,
-.body p + ul,
-.body ul + p {
+.body p + ul {
     margin-top: 24px;
+}
+.body p + p,
+.body ul + p {
+    margin-top: 48px;
 }
 .body ul {
     padding-left: 40px;
@@ -137,13 +139,13 @@ strong {
     display: none;
 }
 .no-decoration li:nth-of-type(n+2) {
-    margin-top: 8px;
+    margin-top: 16px;
 }
 .designy {
     background-color: rgba(255, 255, 255, 0.24);
     border-radius: 4px;
     height: 4px;
-    margin: 40px 0;
+    margin: 56px 0;
 }
 .heading--intro {
     color: #FED21C;
@@ -255,6 +257,10 @@ strong {
     line-height: 40px;
     padding-left: 52px;
     position: relative;
+    text-decoration: none;
+}
+.logo a {
+    color: #FFF;
     text-decoration: none;
 }
 .logo--img {
