--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -161,6 +161,9 @@ strong {
 .text--center {
     text-align: center;
 }
+.micro {
+    font-size: 16px;
+}
 
 @media screen and (min-width: 800px) {
     .xl {
