--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -15,10 +15,12 @@ html {
     background-size: 600px;*/
     color: #171C21;
     font: normal 16px/1.5 'IBM Plex Sans Condensed', -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding-top: 80px;
 }
 
 a {
     text-decoration: underline;
+    transition: transform 0.16s ease-in-out;
 }
 a:hover {
     text-decoration: none;
@@ -49,18 +51,24 @@ a:active {
     cursor: pointer;
     display: block;
     text-decoration: none;
-    transition: box-shadow 0.32s ease-in-out,
-                background-color 0.32s ease-in-out;
+    /*transition: box-shadow 0.32s ease-in-out,
+                background-color 0.32s ease-in-out;*/
 }
-.work-item h2 {
+/*.work-item h2 {
     color: #7502D1;
-}
-.work-item:hover {
-    background-color: rgba(220, 175, 255, .12);
-    box-shadow: 0 0 0 24px rgba(220, 175, 255, .12);
+}*/
+.work-item:hover h2 {
+    /*background-color: rgba(220, 175, 255, .12);
+    box-shadow: 0 0 0 24px rgba(220, 175, 255, .12);*/
+    color: #7502D1;
 }
 .work-item:nth-of-type(n+2) {
     margin-top: 64px;
+}
+@media screen and (min-width: 800px) {
+    .work-item--grid:nth-of-type(n+2) {
+        margin-top: 0;
+    }
 }
 .work-item p {
     margin-bottom: 16px;
@@ -75,11 +83,17 @@ a:active {
 
 .tldr {
     background-color: #DCAFFF;
-/*    border: 1px solid #440179;*/
-    border-radius: 4px;
-/*    box-shadow: 0 12px 32px rgba(33, 37, 41, 0.24);*/
-    padding: 16px 40px 32px;
+/*    border-radius: 0;*/
+    margin: 0 -24px;
+    padding: 16px 24px 24px;
     list-style: none;
+}
+@media screen and (min-width: 800px) {
+    .tldr {
+        border-radius: 4px;
+        margin: 0;
+        padding: 16px 40px 32px;
+    }
 }
 .tldr:before {
     content: "TLDR";
@@ -87,6 +101,9 @@ a:active {
     font-weight: 700;
     letter-spacing: 2px;
     opacity: 0.64;
+}
+.tldr li:nth-of-type(n+2) {
+    margin-top: 8px;
 }
 li:after {
     content: ",";
@@ -274,22 +291,32 @@ strong {
     font-family: 'IBM Plex Sans Condensed', sans-serif;
 }
 .header {
-/*    background-color: rgb(117, 2, 209);*/
+    background-color: rgba(249 241 255 / 0.64);
+    backdrop-filter: blur(12px);
+    border-bottom: 1px solid #EBD6FB;
+    padding: 24px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
     font-size: 20px;
     left: 0;
-    padding: 24px 24px 0;
+    padding: 24px;
+    align-items: center;
+    display: grid;
+    grid-template-columns: 40px 1fr;
 }
-@media screen and (min-width: 800px) {
+/*@media screen and (min-width: 800px) {
     .header {
-        background-color: rgba(249 241 255 / 0.4);
-        backdrop-filter: blur(8px);
+        background-color: rgba(249 241 255 / 0.64);
+        backdrop-filter: blur(12px);
         padding: 24px;
         position: fixed;
         top: 0;
         width: 100%;
         z-index: 10;
     }
-}
+}*/
 .logo {
     color: #171C21;
     line-height: 40px;
@@ -302,26 +329,27 @@ strong {
     text-decoration: none;
 }
 .logo--img {
-    border-radius: 12px;
-    display: inline-block;
+    border-radius: 8px;
+    display: block;
     height: 40px;
-    position: absolute;
+    /*position: absolute;
     left:0;
-    top: 0;
+    top: 0;*/
     width: 40px;
 }
 .nav {
 /*    background-color: #FFF;*/
     display: block;
 /*    left: 0;*/
-    line-height: 40px;
-    margin-top: 24px;
+/*    line-height: 40px;*/
+/*    margin-top: 24px;*/
 /*    padding: 0;*/
     /*position: fixed;
     bottom: 0;
     overflow: auto;
     width: 800px;
     z-index: 10;*/
+    text-align: right;
 }
 .nav--link {
     color: #171C21;
@@ -350,11 +378,19 @@ strong {
     z-index: -1;
 }
 .nav--link:hover::before,
-.nav--link:focus::before {
+.nav--link:focus::before,
+.active::before {
     opacity: 1;
 }
 .nav--link:nth-of-type(n+2) {
-    margin-left: 32px;
+    margin-left: 24px;
+}
+.active {
+    cursor: not-allowed;
+}
+.active:active {
+    opacity: 1;
+    transform: scale(1);
 }
 
 .hero {
@@ -365,6 +401,9 @@ strong {
 .works {
     margin-bottom: 64px;
     padding-bottom: 64px;
+}
+.works h3.heading {
+    color: #A355E2;
 }
 .hero::after,
 .works::after {
@@ -571,10 +610,7 @@ strong {
     }
 }
 
-.skill-list {
-    list-style: none;
-}
-.skill-list li {
+/*.skill-list li {
     padding-left: 40px;
     position: relative;
 }
@@ -590,7 +626,7 @@ strong {
     position: absolute;
     top: 12px;
     width: 24px;
-}
+}*/
 
 
 .about, .reviews {
@@ -653,14 +689,14 @@ strong {
 /*.btn:nth-of-type(n+2) {
     margin-top: 24px;
 }*/
-@media screen and (max-width: 799px) {
+/*@media screen and (max-width: 799px) {
     .links {
         display: grid;
         grid-column-gap: 24px;
         grid-row-gap: 24px;
         grid-template-columns: repeat(2, 1fr);
     }
-}
+}*/
 @media screen and (min-width: 800px) {
     .btn {
         display: inline-block;
@@ -669,11 +705,11 @@ strong {
     .btn:nth-of-type(n+2) {
         margin-top: 0;
     }
-    .links {
+    /*.links {
         margin-left: -8px;
         margin-right: -8px;
         margin-top: -8px;
-    }
+    }*/
 }
 .btn--black {
     background-color: #171C21;
@@ -835,6 +871,23 @@ background-color: #7502D1;
     }
 }
 
+.links a {
+    color: #171C21;
+    display: inline-block;
+    font-size: 24px;
+}
+.links a:nth-of-type(n+2) {
+    margin-left: 24px;
+}
+@media screen and (max-width: 799px) {
+    .links a {
+        display: block;
+    }
+    .links a:nth-of-type(n+2) {
+        margin-left: 0;
+        margin-top: 12px;
+    }
+}
 
 .footer {
     /*background-image: url(../images/bottom.svg);
@@ -846,12 +899,9 @@ background-color: #7502D1;
     /*padding: 320px 0 120px;
     text-align: center;*/
 }
-.footer a {
-    color: #171C21;
-    display: inline-block;
-}
-.footer a:nth-of-type(n+2) {
-    margin-left: 16px;
+.footer .links a {
+    padding: 0;
+    font-size: 16px;
 }
 .footer h4 {
 /*    color: #9F6EDB;*/
