--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -35,11 +35,11 @@ a:active {
 /*    max-width: 1200px;*/
     max-width: 920px;
     padding: 0 24px;
-    overflow: hidden;
+/*    overflow: hidden;*/
 }
-.about .container {
+/*.about .container {
     overflow: visible;
-}
+}*/
 .work-container img {
     box-shadow: 0 12px 32px rgba(33, 37, 41, 0.24);
     max-width: 100%;
@@ -54,13 +54,16 @@ a:active {
     /*transition: box-shadow 0.32s ease-in-out,
                 background-color 0.32s ease-in-out;*/
 }
-/*.work-item h2 {
-    color: #7502D1;
-}*/
 .work-item:hover h2 {
     /*background-color: rgba(220, 175, 255, .12);
     box-shadow: 0 0 0 24px rgba(220, 175, 255, .12);*/
     color: #7502D1;
+}
+.soon {
+    cursor: default;
+}
+.soon:hover h2 {
+    color: #171C21;
 }
 .work-item:nth-of-type(n+2) {
     margin-top: 64px;
@@ -74,15 +77,24 @@ a:active {
     margin-bottom: 16px;
     max-width: 560px;
 }
-.work-item img {
+.work-item img, .work-sample {
     border: 1px solid #EBD6FB;
-    border-radius: 8px;
+    border-radius: 4px;
     box-shadow: 0 4px 12px rgba(33, 37, 41, 0.08);
     width: 100%;
 }
+@media screen and (min-width: 1200px) {
+    .work-sample {
+        max-width: 140%;
+        width: auto;
+    }
+}
 
 .tldr {
-    background-color: #DCAFFF;
+    background-color: #FFF;
+    border-left: 1px solid #EBD6FB;
+    border-right: 1px solid #EBD6FB;
+    box-shadow: 0 4px 12px rgba(33, 37, 41, 0.08);
 /*    border-radius: 0;*/
     margin: 0 -24px;
     padding: 16px 24px 24px;
@@ -90,18 +102,19 @@ a:active {
 }
 @media screen and (min-width: 800px) {
     .tldr {
-        border-radius: 4px;
+        border-radius: 12px;
+        border: 1px solid #EBD6FB;
         margin: 0;
-        padding: 16px 40px 32px;
+        padding: 32px 40px;
     }
 }
-.tldr:before {
+/*.tldr:before {
     content: "TLDR";
     font-size: 16px;
     font-weight: 700;
     letter-spacing: 2px;
     opacity: 0.64;
-}
+}*/
 .tldr li:nth-of-type(n+2) {
     margin-top: 8px;
 }
@@ -214,6 +227,10 @@ strong {
 }
 .micro {
     font-size: 16px;
+}
+
+.body--sm li:nth-of-type(n+2) {
+    margin-top: 8px;
 }
 
 @media screen and (min-width: 800px) {
@@ -664,14 +681,14 @@ strong {
 
 .btn {
     background-color: #FF039A;
-    border-radius: 24px;
+    border-radius: 12px;
     color: #FFF;
     display: block;
     font-size: 20px;
     font-weight: 700;
     line-height: 56px;
     min-width: 120px;
-    padding: 0 24px;
+    padding: 0 40px;
     text-align: center;
     text-decoration: none;
     transition: box-shadow 0.32s ease-in-out;
@@ -700,11 +717,11 @@ strong {
 @media screen and (min-width: 800px) {
     .btn {
         display: inline-block;
-        margin: 8px;
+/*        margin: 8px;*/
     }
-    .btn:nth-of-type(n+2) {
+    /*.btn:nth-of-type(n+2) {
         margin-top: 0;
-    }
+    }*/
     /*.links {
         margin-left: -8px;
         margin-right: -8px;
