--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -93,7 +93,7 @@ a:active {
     width: 100%;
 }
 @media screen and (min-width: 1200px) {
-    .work-sample {
+    .featured .work-item img, .work-sample {
         max-width: 140%;
         width: auto;
     }
