--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -242,6 +242,9 @@ strong {
 .micro {
     font-size: 16px;
 }
+.text--grey {
+    color: #9f9c92;
+}
 
 .body--sm li:nth-of-type(n+2) {
     margin-top: 8px;
@@ -1015,7 +1018,7 @@ body {
   .promo img {
     height: 48px;
     margin-right: 16px;
-    margin-bottom: 24px;
+    margin-bottom: 40px;
   }
   .promo .body {
     font-size: 20px;
